# resume-optimizer

./: .gitignore  .railwayignore  .vercelignore  AGENTS.md  DEBUGGING_SSE.md  DEPLOYMENT.md  README.md  TAILWIND_V4_FIX.md  railway.toml  requirements.txt  start.bat  start.sh
backend/: .env.cloudrun  .env.example  .gcloudignore  .gitignore  .railwayignore  DEPLOYMENT.md  FIX_APP65_README.md  Procfile  QUICKSTART_DEPLOY.md  README.md  check_docx_code.py  debug_app49.py  deploy-cloudrun-fallback.sh  deploy.sh  extract_and_fix_app65.py  fix_app49.py  fix_app54_simple.py  inspect_app65.py  pyproject.toml  railpack.json  railway.toml  requirements.txt  server.py  test_gemini.py  test_pdf_extraction.py  test_pricing_simple.py  test_pricing_v2.py
backend/docs/: DOCX_CODE_GENERATION_FIX.md
backend/docs/integrations/: PDF_PROCESSING_SUMMARY.md
backend/evals/profile_agent_arena/: README.md  run_profile_agent_arena.py  streamlit_app.py  view_results.ipynb
backend/exports/BJAK_Machine_Learning_Engineer_LLM/: resume.docx
backend/migrations/: 001_supabase_schema.sql  002_user_preferences_and_resumes.sql  003_application_reviews.sql  004_minimum_viable_provenance.sql  005_fix_recovery_session_status_constraint.sql  006_add_recovery_sessions_current_agent.sql
backend/prompts/: GROUNDING_RULES.md  agent1_job_analyzer.md  agent2_resume_optimizer.md  agent3_optimizer_implementer.md  agent3_validator.md  agent5_polish.md  agent5_polish_docx.md  agent5_polish_review.md  agent_github_projects_curator.md  agent_refine_resume.md  docx_safeguard_policy.md  metadata_extractor_system.md  metadata_extractor_user_template.md  profile_agent.md  resume_template_example.html
backend/scripts/: check_docx_code.py  migrate_sqlite_to_supabase.py  query_app.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  (+10 more)
backend/tests/: conftest.py  test_application_reviews.py  test_auth_fallback.py  test_file_handler.py  test_health_endpoint.py  test_insight_dedup.py  test_latest_review_endpoint.py  test_page_estimation.py  test_pdf_extraction.py  test_plain_text_to_docx.py  test_polish_review_helpers.py  test_pricing_simple.py  test_pricing_v2.py  test_provenance_helpers.py  test_provenance_writer.py  test_recovery_service.py  test_recovery_supabase_migration.py  test_run_store_accounting.py  test_scrapingdog.py  test_supabase_application_reviews.py  test_upload_resume_endpoint.py
evals/: README.md  __init__.py  inspect_current_db.py  inspect_db.py  pyproject.toml
evals/db/: __init__.py  eval_db.py
evals/docs/: methodology.md  research_design.md
evals/framework/: __init__.py  analyzer.py  collector.py  config.py  config_resume.py  runner.py  schemas.py
evals/notebooks/: explore_eval_results.ipynb
evals/notes/: methodology.md  research_design.md
evals/scripts/: __init__.py  analyze_results.py  run_eval.py
evals/tests/: __init__.py  conftest.py  test_analyzer.py  test_backend_import.py  test_eval_db.py  test_runner.py
evals/ui/: __init__.py  app.py  judge_ui.py  new_eval.py
(+306 files in other folders)
